[package]
name = "synnax"
version = "0.1.7"
edition = "2021"
description = "Cosmos-SDK multichain client"
authors = ["Sylvestre Gallon <sylvestre@klub.ki"]
repository = "https://github.com/SylvestreG/synnax/"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
log = "0.4.17"
env_logger = "0.9.1"
hex = "0.4.3"
base64 = "0.13.0"
serde-aux = "4.0.0"